# kouzui

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_old.txt
integration_tests/: Dockerfile.clients  Dockerfile.tracker  pod.yml  test_data.py
planning/: 20260306-version2.md
src/: bencode.py  config.py  display.py  engine.py  file_manager.py  http_stream.py  internal_messages.py  main.py  messages.py  networking.py  peer.py  peer_connection.py  peer_messages.py  peer_state.py  requests.py  requirements.txt  shared_types.py  test_server.py  token_bucket.py  torrent.py  tracker.py  utility_types.py
unit_tests/: test_bencode.py  test_peer_messages.py
