[project]
name = "kouzui"
version = "0.1.0"
description = "Kouzui - a Bittorrent client using the Trio library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitarray==3.8.0",
    "h11==0.16.0",
    "trio==0.23.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "dist",
]
