[project]
name = "kouzui"
version = "0.1.0"
description = "Kouzui - a Bittorrent client using the Trio library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitarray==3.8.0",
    "h11==0.16.0",
    "pytest>=9.0.2",
    "trio==0.32.0",
    "typer>=0.24.1",
]

[project.scripts]
kouzui = "main:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
exclude = [
    "^build/",
]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
]
testpaths = [
    "src",
    "unit_tests",
]
pythonpath = ["src"]

[tool.ty.environment]
python-version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "dist",
]
